--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.10.5",
+    "antd": "^4.16.1",
+    "dayjs": "^1.10.5",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
